Add help command

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
             <div class="terminal-content" id="terminal_content">
                 <div id="terminal_outputs">
-                    <span>Welcome to the terminal</span>
+                    <div>Welcome to the terminal!</div>
+                    <div>For all commands, enter "help"</div>
                 </div>
                 <div class="row">
                     <span>→</span>
